# dryspace-vent

./: .gitignore  Dockerfile  Makefile  README.md  controller.py  driver.py  main.py  master.py  pyproject.toml  slave.py  test_controller.py
.github/workflows/: python-tests.yml
scripts/: config_wizard.py
src/: config_default.py  controller.py  driver.py  logger.py  main.py  master.py  slave.py  test_controller.py  test_driver.py  test_main.py  test_master.py  test_slave.py
