[project]
name = "dryspace-vent"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven de jong ðŸŸ",email = "sdejong@cloudsuite.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
